--- a/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2.csproj
+++ b/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2.csproj
@@ -94,6 +94,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>F:\COM3D2JP\COM3D2_5\COM3D2x64_Data\Managed\Unity.Burst.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.InputSystem">
+      <HintPath>F:\COM3D2JP\COM3D2_5\COM3D2x64_Data\Managed\Unity.InputSystem.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Mathematics, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>F:\COM3D2JP\COM3D2_5\COM3D2x64_Data\Managed\Unity.Mathematics.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.XR.CoreUtils, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>F:\COM3D2JP\COM3D2_5\COM3D2x64_Data\Managed\Unity.XR.CoreUtils.dll</HintPath>
@@ -385,7 +392,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="HandTrackingController.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="OneEuroFilterVector3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VRDeviceManagerPatch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
