Remove dedicated grip action and use short/long pinch for mouse click / grip (any of the finger presses seem inaccurate)

--- a/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2.csproj
+++ b/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2.csproj
@@ -393,6 +393,10 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="HandTrackingController.cs" />
+    <Compile Include="InputActionFilter\IInputActionFilter.cs" />
+    <Compile Include="InputActionFilter\LongPressInputActionFilter.cs" />
+    <Compile Include="InputActionFilter\PassthroughInputActionFilter.cs" />
+    <Compile Include="InputActionFilter\ShortPressInputActionFilter.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="OneEuroFilterVector3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
