Use lastUpdateFrame for checking if we're updating positions on the same frame (float equality comparisons won't always work) Implemented plugin settings for smoothing Refactored Shortpress detection to use state tracking Hand tracking subsystem registrations should happen after features added (or subsystems wont load)

--- a/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2.csproj
+++ b/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2/COM3D25_OpenXRHandsPOC2.csproj
@@ -399,6 +399,7 @@
     <Compile Include="InputActionFilter\ShortPressInputActionFilter.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="OneEuroFilterVector3.cs" />
+    <Compile Include="PluginConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VRDeviceManagerPatch.cs" />
   </ItemGroup>
